fix double scrolling

--- a/webpages/stylingCOP.css
+++ b/webpages/stylingCOP.css
@@ -270,8 +270,8 @@
             
              /* For mobile */
              @media only screen and (min-device-width:320px) and (max-device-width: 667px) and (orientation: portrait) {
-                 html, body {
-                    
+                 body {
+                    overflow: visible;
                      max-width: 100%;
                     overflow-x: hidden;
                      overflow-y: scroll;
